<resources>
    <string name="member_url">https://thaismood.nn-space.me/member</string>
    <string name="member_login_url">https://thaismood.nn-space.me/member/login</string>
    <string name="member_otp_verify_url">https://thaismood.nn-space.me/member/verifyEmail</string>
    <string name="member_check_email_duplicate">https://thaismood.nn-space.me/member/email</string>
    <string name="member_check_username_duplicate">https://thaismood.nn-space.me/member/username</string>
    <string name="member_profile_url">https://thaismood.nn-space.me/member/profile</string>
    <string name="member_temp_password">https://thaismood.nn-space.me/member/tempPassword</string>
    <string name="evaluation_url">https://thaismood.nn-space.me/evaluation</string>
    <string name="url_create_mood">https://thaismood.nn-space.me/record/mood</string>
    <string name="url_sleep">https://thaismood.nn-space.me/record/sleep</string>
    <string name="url_diary">https://thaismood.nn-space.me/record/diary</string>
    <string name="url_find_hospital">https://thaismood.nn-space.me/web/find-hospital.html</string>
    <string name="url_get_profile">https://thaismood.nn-space.me/member/profile</string>
    <string name="url_get_mood">https://thaismood.nn-space.me/record/mood</string>
    <string name="url_get_sleep">https://thaismood.nn-space.me/record/sleep</string>
    <string name="url_get_diary">https://thaismood.nn-space.me/record/diary</string>
    <string name="url_get_evaluation">https://thaismood.nn-space.me/evaluation</string>
    <string name="dialog_regist_header">ลงทะเบียน</string>
    <string name="regist_email_hint">อีเมล</string>
    <string name="regist_username_hint">ชื่อผู้ใช้</string>
    <string name="regist_password_hint">รหัสผ่าน</string>
    <string name="regist_comfirm_password_hint">ยืนยันรหัสผ่าน</string>
    <string name="regist_email_waring_string">อีเมลนี้ ถูกใช้แล้ว ถ้าหากลืมรหัสผ่านกรุณากดลืมรหัสผ่าน</string>
    <string name="regist_username_waring_string">ชื่อผู้ใช้งานนี้ถูกใช้แล้ว</string>
    <string name="regist_confirm_password_warnging_string">รหัสผ่านไม่ตรงกัน</string>
    <string name="dialog_login_header">ลงทะเบียน</string>
    <string name="patient_alert">เนื่องจากข้อคำถามต่อไปนี้มีความสัมพันธ์ต่อการวินิจฉัยโรค การรักษา และการพยากรณ์โรค ข้อมูลของท่านจะถูกเก็บเป็นความลับ อย่างไรก็ตามท่านสามารถนำไปให้จิตแพทย์ดูเพื่อการรักษาได้</string>
    <string name="emergency_contact_instruction">** ใช้เพื่อแจ้งเตือนในกรณีที่ท่านมีความเสี่ยงค่าตัวตาย</string>
    <string name="app_name">Thai\'s Mood</string>
    <string name="q_error">กรุณาตอบแบบประเมินให้ครบทุกคำถาม</string>
    <string name="q_2q_header">แบบคัดกรองโรคซึมเศร้า 2 คำถาม (2Q)</string>
    <string name="q_2q_intro">ในช่วง 2 สัปดาห์ที่ผ่านมา รวมถึงวันนี้</string>
    <string name="q_2q_1">ท่านรู้สึกหดหู่, เศร้า, ท้อแท้สิ้นหวังหรือไม่?</string>
    <string name="q_2q_2">เบื่อ ทำอะไรก็ไม่เพลิดเพลินหรือไม่?</string>
    <string name="q_2q_ans_1">มี</string>
    <string name="q_2q_ans_2">ไม่มี</string>
    <string name="q2q_result1">ท่านไม่มีความเสี่ยงเป็นโรคซึมเศร้า</string>
    <string name="q2q_result2">ท่านมีความเสี่ยงเป็นโรคซึมเศร้า</string>
    <string name="q_9q_header">แบบประเมินโรคซึมเศร้า 9 คำถาม (9Q)</string>
    <string name="q_9q_intro">ในช่วง 2 สัปดาห์ที่ผ่านมารวมทั้งวันนี้ ท่านมีอาการเหล่านี้บ่อยแค่ไหน</string>
    <string name="q_9q_1">1. เบื่อ ไม่สนใจอยากทำอะไร</string>
    <string name="q_9q_2">2. ไม่สบายใจ ซึมเศร้า ท้อแท้</string>
    <string name="q_9q_3">3. หลับยากหรือหลับๆตื่นๆหรือหลับมากไป</string>
    <string name="q_9q_4">4. เหนื่อยง่ายหรือไม่ค่อยมีแรง</string>
    <string name="q_9q_5">5. เบื่ออาหารหรือกินมากเกินไป</string>
    <string name="q_9q_6">6. รู้สึกไม่ดีกับตัวเอง คิดว่าตัวเองล้มเหลวหรือครอบครัวผิดหวัง</string>
    <string name="q_9q_7">7. สมาธิไม่ดีเวลาทำอะไร เช่น ดูโทรทัศน์ ฟังวิทยุ หรือทำงานที่ต้องใช้ความตั้งใจ</string>
    <string name="q_9q_8">8. พูดช้า ทำอะไรช้าลงจนคนอื่นสังเกตเห็นได้ หรือกระสับกระส่ายไม่สามารถอยู่นิ่งได้เหมือนที่เคยเป็น</string>
    <string name="q_9q_9">9. คิดทำร้ายตนเอง หรือคิดว่าถ้าตายไปคงจะดี</string>
    <string name="q_9q_ans_1">ไม่มีเลย</string>
    <string name="q_9q_ans_2">เป็นบางวัน (1-7 วัน)</string>
    <string name="q_9q_ans_3">เป็นบ่อย (มากกว่า 7 วัน)</string>
    <string name="q_9q_ans_4">เป็นทุกวัน</string>
    <string name="q9q_result1">ไม่มีอาการของโรคซึมเศร้าหรือมีอาการของโรคซึมเศร้าระดับน้อยมาก</string>
    <string name="q9q_result2">มีอาการของโรคซึมเศร้า ระดับน้อย</string>
    <string name="q9q_result3">มีอาการของโรคซึมเศร้า ระดับปานกลาง</string>
    <string name="q9q_result4">มีอาการของโรคซึมเศร้า ระดับรุนแรง</string>
    <string name="q_8q_header">แบบประเมินการฆ่าตัวตาย 8 คำถาม (8Q)</string>
    <string name="q_8q_1">1. คิดอยากตาย หรือคิดว่าตายไปจะดีกว่า?</string>
    <string name="q_8q_2">2. อยากทำร้ายตัวเอง หรือทำให้ตัวเองบาดเจ็บ</string>
    <string name="q_8q_3">3. คิดเกี่ยวกับการฆ่าตัวตาย</string>
    <string name="q_8q_3_extra">ท่านสามารถบอกได้หรือไม่ว่าจะไม่ทำตามความคิดที่อยากฆ่าตัวตายในขณะนี้</string>
    <string name="q_8q_4">4. มีแผนการที่จะฆ่าตัวตาย</string>
    <string name="q_8q_5">5. ตายโดยตั้งใจว่าจะให้ตายจริง ๆ</string>
    <string name="q_8q_6">6. ได้ทำให้ตนเองบาดเจ็บแต่ไม่ตั้งใจที่จะทำให้เสียชีวิต</string>
    <string name="q_8q_7">7. ได้พยายามฆ่าตัวตายโดยคาดหวัง/ตั้งใจที่จะให้ตาย</string>
    <string name="q_8q_8">8. ท่านเคยพยายามฆ่าตัวตาย</string>
    <string name="q_8q_ans_1">ไม่มี</string>
    <string name="q_8q_ans_2">มี</string>
    <string name="q_8q_ans_1_ex">ได้</string>
    <string name="q_8q_ans_2_ex">ไม่ได้</string>
    <string name="q8q_result1">ไม่มีแนวโน้มฆ่าตัวตายในปัจจุบัน</string>
    <string name="q8q_result2">มีแนวโน้มที่จะฆ่าตัวตายในปัจจุบัน ระดับน้อย</string>
    <string name="q8q_result3">มีแนวโน้มที่จะฆ่าตัวตายในปัจจุบัน ระดับปานกลาง</string>
    <string name="q8q_result4">มีแนวโน้มที่จะฆ่าตัวตายในปัจจุบัน ระดับรุนแรง</string>
    <string name="q_mdq_header">แบบทดสอบความผิดปกติทางอารมณ์ (MDQ)</string>
    <string name="mdq_1">เคยมีช่วงระยะเวลาใดเวลาหนึ่งในชีวิตที่ผ่านมาที่คุณรู้สึกไม่เป็นตัวของตัวเองตามปกติ และ....</string>
    <string name="mdq_1_1">....คุณรู้สึกอารมณ์ดีมากๆ หรือกระตือรือร้นมากๆ จนผู้อื่นคิดว่าคุณไม่ปกติ หรือคุณทำอะไรมากเกินไปจนทำให้ตัวคุณเองเดือดร้อน?</string>
    <string name="mdq_1_2">....คุณหงุดหงิดง่ายจนคุณพูดเสียงดังใส่คนอื่น หรือก่อเหตุทะเลาะวิวาท หรือชกต่อยกัน?</string>
    <string name="mdq_1_3">....คุณรู้สึกมั่นใจในตนเองมากกว่าปกติ?</string>
    <string name="mdq_1_4">....คุณนอนน้อยลงกว่าปกติมาก และรู้สึกเหมือนไม่ได้อดนอน?</string>
    <string name="mdq_1_5">....คุณพูดมากขึ้น หรือพูดเร็วมากกว่าปกติ?</string>
    <string name="mdq_1_6">....คุณมีความคิดพลุ่งพล่าน หรือคุณไม่สามารถสงบจิตใจได้?</string>
    <string name="mdq_1_7">....คุณวอกแวกกับสิ่งต่าง ๆ รอบตัวคุณได้ง่าย จนคุณไม่มีสมาธิ หรือไม่สามารถจดจ่อในเรื่องใดเรื่องหนึ่ง?</string>
    <string name="mdq_1_8">....คุณมีเรี่ยวแรงมากกว่าปกติ?</string>
    <string name="mdq_1_9">....คุณกระฉับกระเฉงมากขึ้น หรือทำสิ่งต่างๆ มากกว่าปกติ?</string>
    <string name="mdq_1_10">....คุณชอบเข้าสังคม หรือพบปะผู้คนมากกว่าปกติ เช่น คุณโทรศัพท์หาเพื่อนกลางดึก?</string>
    <string name="mdq_1_11">....คุณมีความสนใจในเรื่องทางเพศมากกว่าปกติ?</string>
    <string name="mdq_1_12">....คุณทำสิ่งต่างๆ ที่ผิดวิสัยของคุณ หรือทำสิ่งที่ผู้อื่นอาจคิดว่ามันมากเกินควร หรือมีความเสี่ยง?</string>
    <string name="mdq_1_13">....คุณใช้จ่ายเงินจนทำให้ตัวเอง หรือครอบครัวของคุณเดือดร้อน?</string>
    <string name="mdq_2">2. เหตุการณ์ต่างๆ เหล่านี้ส่วนใหญ่เกิดขึ้นในช่วงระยะเวลาใกล้เคียงกันใช่หรือไม่ กรุณาเลือกวงเพียงหนึ่งคำตอบเท่านั้น</string>
    <string name="mdq_3">3. เหตุการณ์ต่างๆ เหล่านี้ส่งผลกระทบต่อคุณในขณะนั้นมากเพียงใด-เช่น มีผลให้คุณทำงานไม่ได้, มีปัญหาในครอบครัว, ด้านการเงิน, หรือด้านกฎหมาย ทำให้คุณเข้าไปมีส่วนในการโต้เถียง หรือทะเลาะวิวาท? กรุณาเลือกวงเพียงหนึ่งคำตอบเท่านั้น</string>
    <string name="q_mdq_ans_1">ใช่</string>
    <string name="q_mdq_ans_2">ไม่ใช่</string>
    <string name="q_mdq_ans_3">ไม่ก่อปัญหา</string>
    <string name="q_mdq_ans_4">ก่อปัญหาเล็กน้อย</string>
    <string name="q_mdq_ans_5">ก่อปัญหาปานกลาง</string>
    <string name="q_mdq_ans_6">ก่อปัญหารุนแรง</string>
    <string name="q_mdq_ans_7">ใช่</string>
    <string name="mdq_result1">มีความเสี่ยงเป็นโรคอารมณ์แปรปรวนสองขั้ว</string>
    <string name="mdq_result2">ไม่มีความเสี่ยงเป็นโรคอารมณ์แปรปรวนสองขั้ว</string>
    <string name="result_2q_band">2Q</string>
    <string name="result_9q_band">9Q</string>
    <string name="result_8q_band">8Q</string>
    <string name="result_mdq_band">MDQ</string>
    <string name="result_2q_header">ผลการแปรผลแบบคัดกรองโรคซึมเศร้า 2 คำถาม (2Q)</string>
    <string name="result_9q_header">ผลการแปรผลแบบประเมินโรคซึมเศร้า 9 คำถาม (9Q)</string>
    <string name="result_8q_header">ผลการแปรผลแบบประเมินการฆ่าตัวตาย 8 คำถาม (8Q)</string>
    <string name="result_mdq_header">ผลการแปรผลแบบประเมินความผิดปกติทางอารมณ์ (MDQ)</string>
    <string name="menu_home">หน้าแรก</string>
    <string name="menu_add">เพิ่ม</string>
    <string name="menu_temp_password">รหัสชั่วคราว</string>
    <string name="menu_profile">ข้อมูลลส่วนตัว</string>
    <string name="menu_summary">ข้อมูลสรุป</string>
    <string name="header_oneitem">รายการที่บันทึก</string>
    <string name="header_graph">กราฟอารมณ์</string>
    <string name="header_add">เพิ่ม</string>
    <string name="header_help">ช่วยเหลือ</string>
    <string name="header_diary">ไดอารี</string>
    <string name="title_oneitem">สรุป</string>
    <string name="title_graph">กราฟอารมณ์</string>
    <string name="title_home">โฮม</string>
    <string name="title_blank"></string>
    <string name="title_help">ช่วยเหลือ</string>
    <string name="title_diary">ไดอารี่</string>
    <string name="list_view_menu_record_title"></string>
    <string name="list_view_menu_mood_title"></string>
    <string name="list_view_menu_sleep_title"></string>
    <string name="list_view_menu_activity_title"></string>
    <string name="list_view_menu_excercise_title"></string>
    <string name="otp_success">เจ๋งเลย! รหัสยืนยันของคุณถูกต้อง เริ่มต้นกรอกข้อมูลผู้ใช้กันเลย</string>
    <string name="otp_fail">รหัสยืนยันไม่ถูกต้อง</string>
    <string name="register_ask_type_header">เลือกประเภทผู้ใช้</string>
    <string name="register_ask_type_general_lable">ผู้ใช้ทั่วไป</string>
    <string name="register_ask_type_patient_lable">ผู้ป่วย</string>
    <string name="register_ask_type_is_still_treat_header">ยังรับการรักษาอยู่ไหม</string>
    <string name="register_ask_type_is_still_treat_yes">ยังคงรักษาอยู่</string>
    <string name="register_ask_type_is_still_treat_no">ไม่ได้รักษาแล้ว</string>
    <string name="register_ask_sex_header">กรุณาเลือกเพศของคุณ</string>
    <string name="register_ask_sex_male">ชาย</string>
    <string name="register_ask_sex_female">หญิง</string>
    <string name="register_ask_sex_pregnant_header">คุณกำลังตั้งครรภ์ไหม</string>
    <string name="register_ask_sex_no_pregnant">ไม่ได้ตั้งครรภ์</string>
    <string name="register_ask_sex_pregnant">ตั้งครรภ์</string>
    <string name="register_form_ask_disorder">โรคที่เป็น</string>
    <string name="register_form_ask_disease">ท่านมีโรคประจำตัวดังต่อไปนี้หรือไม่</string>
    <string name="register_form_ask_disease_1">เบาหวาน ความดัน ไขมัน</string>
    <string name="register_form_ask_disease_2">ไทรอยด์</string>
    <string name="register_form_ask_disease_2_2">(ความผิดปกติของต่อมไทรอยด์)</string>
    <string name="register_form_ask_disease_3">โรคหลอดเลือดสมอง</string>
    <string name="menu_profiles">ดูโปรไฟล์</string>
    <string name="menu_evaluation">ประวัติการทำแบบประเมิน</string>
    <string name="menu_tools">ตั้งค่า</string>
    <string name="menu_about">เกี่ยวกับ</string>
    <string name="menu_logout">ออกจากระบบ</string>
    <string name="action_mood">อารมณ์</string>
    <string name="action_activity">กิจกรรม</string>
    <string name="action_exercise">การออกกำลังกาย</string>
    <string name="action_summary">ข้อมูลสรุป</string>
</resources>