<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group >
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profiles" />
        <item
            android:id="@+id/nav_evaluation_history"
            android:icon="@drawable/ic_evaluation"
            android:title="@string/menu_evaluation" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="เพิ่มเติม">
        <menu>
            <item
                android:id="@+id/nav_start"
                android:icon="@drawable/ic_about"
                android:title="เริ่มตั้งแต่ต้น" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
