<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_mood"
        android:orderInCategory="100"
        android:title="@string/action_mood"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_activity"
        android:orderInCategory="100"
        android:title="@string/action_activity"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exercise"
        android:orderInCategory="100"
        android:title="@string/action_exercise"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_summary"
        android:orderInCategory="100"
        android:title="@string/action_summary"
        app:showAsAction="never" />
</menu>
