<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Q8Q">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_weight="80"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/thsarabunnew_bold"
                android:text="แบบประเมินโรคซึมเศร้า 8 คำถาม"
                android:textSize="25dp"
                android:layout_marginBottom="20dp"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <!--No.1-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/thsarabunnew_bold"
                        android:textSize="@dimen/evaluation_q_size"
                        android:text="@string/q_8q_1"/>
                    <RadioGroup
                        android:id="@+id/q_8q_1_answer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">
                        <RadioButton
                            android:id="@+id/q_8q_1_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/evaluation_q_size"
                            android:fontFamily="@font/thsarabunnew_bold"
                            android:tag="0"
                            android:text="ไม่มี"/>
                        <RadioButton
                            android:id="@+id/q_8q_1_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/evaluation_q_size"
                            android:fontFamily="@font/thsarabunnew_bold"
                            android:tag="1"
                            android:text="มี"/>

                    </RadioGroup>

                    <!--No.2-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/thsarabunnew_bold"
                        android:textSize="@dimen/evaluation_q_size"
                        android:text="@string/q_8q_2"/>
                    <RadioGroup
                        android:id="@+id/q_8q_2_answer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">
                        <RadioButton
                            android:id="@+id/q_8q_2_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/thsarabunnew_bold"
                            android:textSize="@dimen/evaluation_q_size"
                            android:tag="0"
                            android:text="ไม่มี"/>
                        <RadioButton
                            android:id="@+id/q_8q_2_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/thsarabunnew_bold"
                            android:textSize="@dimen/evaluation_q_size"
                            android:tag="2"
                            android:text="มี"/>

                    </RadioGroup>

                    <!--No3-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/thsarabunnew_bold"
                        android:textSize="@dimen/evaluation_q_size"
                        android:text="@string/q_8q_3"/>
                    <RadioGroup
                        android:id="@+id/q_8q_3_answer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">
                        <RadioButton
                            android:id="@+id/q_8q_3_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/thsarabunnew_bold"
                            android:textSize="@dimen/evaluation_q_size"
                            android:tag="0"
                            android:text="ไม่มี"/>
                        <RadioButton
                            android:id="@+id/q_8q_3_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/thsarabunnew_bold"
                            android:textSize="@dimen/evaluation_q_size"
                            android:tag="6"
                            android:text="มี"/>

                    </RadioGroup>

                    <!--No4-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/thsarabunnew_bold"
                        android:textSize="@dimen/evaluation_q_size"
                        android:text="@string/q_8q_4"/>
                    <RadioGroup
                        android:id="@+id/q_8q_4_answer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">
                        <RadioButton
                            android:id="@+id/q_8q_4_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/thsarabunnew_bold"
                            android:textSize="@dimen/evaluation_q_size"
                            android:tag="0"
                            android:text="ไม่มี"/>
                        <RadioButton
                            android:id="@+id/q_8q_4_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/thsarabunnew_bold"
                            android:textSize="@dimen/evaluation_q_size"
                            android:tag="8"
                            android:text="มี"/>

                    </RadioGroup>

                    <!--No5-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/thsarabunnew_bold"
                        android:textSize="@dimen/evaluation_q_size"
                        android:text="@string/q_8q_5"/>
                    <RadioGroup
                        android:id="@+id/q_8q_5_answer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">
                        <RadioButton
                            android:id="@+id/q_8q_5_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/thsarabunnew_bold"
                            android:textSize="@dimen/evaluation_q_size"
                            android:tag="0"
                            android:text="ไม่มี"/>
                        <RadioButton
                            android:id="@+id/q_8q_5_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/thsarabunnew_bold"
                            android:textSize="@dimen/evaluation_q_size"
                            android:tag="9"
                            android:text="มี"/>

                    </RadioGroup>

                    <!--No6-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/thsarabunnew_bold"
                        android:textSize="@dimen/evaluation_q_size"
                        android:text="@string/q_8q_6"/>
                    <RadioGroup
                        android:id="@+id/q_8q_6_answer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">
                        <RadioButton
                            android:id="@+id/q_8q_6_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/thsarabunnew_bold"
                            android:textSize="@dimen/evaluation_q_size"
                            android:tag="0"
                            android:text="ไม่มี"/>
                        <RadioButton
                            android:id="@+id/q_8q_6_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/thsarabunnew_bold"
                            android:tag="4"
                            android:textSize="@dimen/evaluation_q_size"
                            android:text="มี"/>

                    </RadioGroup>

                    <!--No7-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/thsarabunnew_bold"
                        android:textSize="@dimen/evaluation_q_size"
                        android:text="@string/q_8q_7"/>
                    <RadioGroup
                        android:id="@+id/q_8q_7_answer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">
                        <RadioButton
                            android:id="@+id/q_8q_7_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/thsarabunnew_bold"
                            android:textSize="@dimen/evaluation_q_size"
                            android:tag="0"
                            android:text="ไม่มี"/>
                        <RadioButton
                            android:id="@+id/q_8q_7_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/thsarabunnew_bold"
                            android:textSize="@dimen/evaluation_q_size"
                            android:tag="10"
                            android:text="มี"/>

                    </RadioGroup>

                    <!--No.8-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/thsarabunnew_bold"
                        android:textSize="@dimen/evaluation_q_size"
                        android:text="@string/q_8q_8"/>
                    <RadioGroup
                        android:id="@+id/q_8q_8_answer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">
                        <RadioButton
                            android:id="@+id/q_8q_8_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/thsarabunnew_bold"
                            android:textSize="@dimen/evaluation_q_size"
                            android:tag="0"
                            android:text="ไม่มี"/>
                        <RadioButton
                            android:id="@+id/q_8q_8_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/thsarabunnew_bold"
                            android:textSize="@dimen/evaluation_q_size"
                            android:tag="4"
                            android:text="มี"/>

                    </RadioGroup>

                </LinearLayout>
            </ScrollView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="vertical">
            <Button
                android:id="@+id/q_8q_nextbtn"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:background="#055560"
                android:fontFamily="@font/thsarabunnew_bold"
                android:text="ถัดไป"
                android:textColor="#FFFFFF"
                android:textSize="25dp" />


        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>